# UFC-Ranking-by-Fight-Minds

./: README.md  changelog.md
.github/workflows/: python_code_checker.yaml
core_module/: pyproject.toml  setup.cfg
core_module/fmranker/: dummy.py
core_module/tests/: dummy_test.py
