[metadata]
name = fmranker
author = Fight Minds community
description = This is the fmranker repository.
long_description = fmranker is the python package where a new ranking logic for the UFC is computed.
keywords = MMA Fight Minds UFC Rank 
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    pandas==2.1.3

[options.extras_require]

dev = 
    black[jupyter]==22.3.0
    isort==5.10.1
    pytest==7.1.2
    pytest-cov==3.0.0
    pylint==2.13.8
    mypy==1.0.0
    bandit[toml]==1.7.4
    pip-tools # for deps pinning
    types-python-slugify==6.1.0
    dash==2.7.0
    build
    twine



ipy =
    ipython
    ipykernel
    ipython_genutils
    notebook
    jupyterlab

doc =
    ipython
    jupyter-book==0.13.1
    sphinx-autoapi # auto generate API doc
    ghp-import #publish on github page
    myst-nb 
    myst-parser
